--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,5 @@
 POSTGRES_USER=admin
-POSTGRES_PASSWORD=ae!zr!q&e4sg356&q4erg1é"'-è61rg365qrg56!
+POSTGRES_PASSWORD=PASSWORD
 POSTGRES_DB=eav
 POSTGRES_HOST=database
 POSTGRES_PORT=5432
