Revert "not that yet"
This reverts commit f1c5b9969ad349508a50916366cbb94fb5284754.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
 version: '3'
 
-name: eav
 services:
  database:
   container_name: postgresql
-  build:
-      context: ./pg/
-      dockerfile: Dockerfile
+  image: 'bitnami/postgresql'
   ports:
     - '5433:5432'
   env_file:
-    - './.env'
+    - './database.env'
+  volumes:
+    - ./code:/code
   restart: unless-stopped
